Changelog for Collections.

- English and German lexicon updates

Collections 1.2.0
===================
- Added ability to search via created by full name
- Added ability to search via created by username
- Fixed switching child between two Collections
- Fixed switching great parent to Collections when moving last child
- Fixed child name after creating a duplicate
- Added drag & drop sort by menuindex

Collections 1.1.1
===================
- #20 Fixed after re-save child set show_in_tree 1

Collections 1.1.0
===================
- #9 Added duplicate button
- #10 Added icon for Collection into the Resource tree
- #11 Make grid stateful and added some more columns (until clearing cache grid keeps showed/hidden columns and their order)
- Renamed "Collection container" to "Collection"
- #7 Added German translation (thanks to pepebe)
- #12 Added Czech translation
- #14 Added Dutch translation (thanks to @mark_hamstra)
- #15 Added French translation (thanks to @rtripault)
- #16 #17 Added Russian translation (thanks to vanchelo)
- #18 Fixed show_in_tree conflict

Collections 1.0.0
===================
- Published in MODX extras

Collections 0.8.2
===================
- Finished renaming CollectionsContainer -> CollectionContainer
- Removed chromephp log calls

Collections 0.8.1
===================
- Fixed showing aliases in children grid

Collections 0.8.0
===================
- Renamed CollectionsContainer to CollectionContainer
- Fixed returning proper count of children under Collection Container

Collections 0.7.0
===================
- Added switchback resolver that will switch all Collections Containers back to modDocument and set show_in_tree to 1 for all Collections children on uninstall
- Added support for handle class_key switch from CollectionContainer and to CollectionContainer

Collections 0.6.0
===================
- Fixed proper showing Collections Container under another Collections Container
- Fixed proper showing normal containers with children under CRC