@@ -47,6 +47,9 @@ Ext.ux.dd.GridReorderDropTarget = function(grid, config) {
             return true;
         }
         ,notifyOver: function(dd, e, data) {
+            this.grid.getView().dragZone.ddel.innerHTML = this.grid.getDragDropText();
+            this.grid.getView().dragZone.proxy.update(this.grid.getView().dragZone.ddel);
+
             if (data.grid.store.sortInfo == undefined || data.grid.store.sortInfo.field != this.sortCol) {
                 return this.dropNotAllowed;
             }
